--- a/src/app/film-list/film-list.component.css
+++ b/src/app/film-list/film-list.component.css
@@ -2,6 +2,41 @@
   height: 100%;
 }
 
+#container {
+  margin: 1%;
+}
+
+.film-list {
+  margin: 1%;
+}
+
 .poster {
   width: 100%;
+}
+
+.movie-container {
+  position: relative;
+}
+
+.movie-hover-effect {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.72);
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.35em;
+  /* transition effect. not necessary */
+  transition: opacity 0.2s, visibility 0.2s;
+  text-align: justify;
+  padding: 5px;
+}
+
+.movie-container:hover .movie-hover-effect {
+  visibility: visible;
+  opacity: 1;
 }
