changement page d'accueil: debut

--- a/src/app/app-menu/app-menu.component.html
+++ b/src/app/app-menu/app-menu.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar>
-  <a routerLink=""> ACCUEIL </a>
+  <span> </span>
+  <a routerLink="/"> ACCUEIL </a>
   <a routerLink="movies"> LISTE DES FILMS </a>
 </mat-toolbar>
