--- a/src/app/landing-page/landing-page-component.html
+++ b/src/app/landing-page/landing-page-component.html
@@ -1,5 +1,5 @@
 <div class="landing-block">
   <div class="landing-links">
-    <a routerLink="movies">Continuer vers OnRegardeQuoiCeSoir ?</a>
+    <a routerLink="/movies">Continuer vers OnRegardeQuoiCeSoir ?</a>
   </div>
 </div>
