--- a/src/app/app-menu/app-menu.component.html
+++ b/src/app/app-menu/app-menu.component.html
@@ -1,5 +1,35 @@
-<mat-toolbar>
-  <span> </span>
-  <a routerLink="/"> ACCUEIL </a>
-  <a routerLink="movies"> LISTE DES FILMS </a>
-</mat-toolbar>
+<mat-sidenav-container
+  class="sidenav-container"
+  fxShow="true"
+  fxHide.gt-sm="true"
+>
+  <mat-sidenav
+    #drawer
+    class="sidenav"
+    fixedInViewport
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'"
+    [opened]="(isHandset$ | async) === false"
+  >
+    <mat-toolbar>Menu</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item href="/movies">LISTE DE FILMS</a>
+      <a mat-list-item href="/movies">MOVIE PICKER</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async"
+      >
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <span>formula-one-bets-app</span>
+    </mat-toolbar>
+    <!-- Add Content Here -->
+  </mat-sidenav-content>
+</mat-sidenav-container>
