--- a/src/app/app-menu/app-menu.component.css
+++ b/src/app/app-menu/app-menu.component.css
@@ -6,7 +6,7 @@
   width: 200px;
 }
 
-.sidenav .mat-toolbar {
+.sidenav {
   background: inherit;
 }
 
@@ -14,4 +14,50 @@
   position: sticky;
   top: 0;
   z-index: 1;
+}
+
+.hidden {
+  display: none;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.mat-toolbar a {
+  display: inline-block;
+  margin: 0 5px;
+  color: white;
+}
+
+a {
+  position: relative;
+  text-decoration: none;
+  text-underline-offset: 6px;
+}
+
+.active {
+  text-decoration: underline;
+  cursor: default;
+  pointer-events: none;
+  font-weight: bold;
+}
+
+a:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background: #ffffff;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: 0.25s linear;
+}
+
+a:hover:before,
+a:focus:before {
+  visibility: visible;
+  transform: scaleX(1);
 }
