--- a/src/app/app-menu/app-menu.component.html
+++ b/src/app/app-menu/app-menu.component.html
@@ -15,7 +15,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="accent">
+    <mat-toolbar color="primary">
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -32,6 +32,7 @@
         routerLink="/movies"
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
+        [ngClass]="{ hidden: (isHandset | async) === true }"
         mat-list-item
         >LISTE DE FILMS</a
       >
@@ -39,6 +40,7 @@
         routerLink=""
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
+        [ngClass]="{ hidden: (isHandset | async) === true }"
         mat-list-item
         >FILM PICKER</a
       >
