Theme: done; adding the logo

--- a/src/app/app-menu/app-menu.component.html
+++ b/src/app/app-menu/app-menu.component.html
@@ -26,7 +26,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span class="spacer"></span>
-      <span>OnRegardeQuoiCeSoir ?</span>
+      <span><img [src]="logo_path" /></span>
       <span class="spacer"></span>
       <a
         routerLink="/movies"
