--- a/src/app/app-menu/app-menu.component.css
+++ b/src/app/app-menu/app-menu.component.css
@@ -10,10 +10,14 @@
   background: inherit;
 }
 
+#sidenav_logo {
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+}
+
 .mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+  height: 70px;
 }
 
 .hidden {
@@ -30,7 +34,7 @@
 }
 
 .mat-toolbar img {
-  height: 100%;
+  height: 60px;
 }
 
 a {
