--- a/src/app/app-menu/app-menu.component.html
+++ b/src/app/app-menu/app-menu.component.html
@@ -8,7 +8,7 @@
     [mode]="(isHandset | async) ? 'over' : 'side'"
     [opened]="(isHandset | async) === false"
   >
-    <mat-toolbar color="primary">Menu</mat-toolbar>
+    <mat-toolbar color="primary"><span id="sidenav_logo"></span></mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="movies">LISTE DE FILMS</a>
       <a mat-list-item routerLink="">FILM PICKER</a>
@@ -26,24 +26,26 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span class="spacer"></span>
-      <span><img [src]="logo_path" /></span>
+      <span
+        ><a routerLink="/"><img [src]="logo_path_textless" /></a
+      ></span>
       <span class="spacer"></span>
-      <a
-        routerLink="/movies"
-        routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
-        [ngClass]="{ hidden: (isHandset | async) === true }"
-        mat-list-item
-        >LISTE DE FILMS</a
-      >
-      <a
-        routerLink=""
-        routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
-        [ngClass]="{ hidden: (isHandset | async) === true }"
-        mat-list-item
-        >FILM PICKER</a
-      >
+      <div [ngClass]="{ hidden: (isHandset | async) === true }">
+        <a
+          routerLink="/movies"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          mat-list-item
+          >LISTE DE FILMS</a
+        >
+        <a
+          routerLink=""
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          mat-list-item
+          >FILM PICKER</a
+        >
+      </div>
     </mat-toolbar>
     <ng-content></ng-content>
   </mat-sidenav-content>
